# hypruse

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/aur/hypruse/: .SRCINFO  PKGBUILD
packaging/aur/hypruse-git/: .SRCINFO  PKGBUILD
scripts/: e2e_input.py
src/hypruse/: __init__.py  __main__.py  a11y.py  cli.py  clipboard.py  events.py  hyprctl.py  input.py  safety.py  screenshot.py  server.py  session.py  trust.py  wire.py
tests/: conftest.py  test_a11y.py  test_binds.py  test_cli.py  test_clipboard.py  test_close_window.py  test_e2e.py  test_events.py  test_fit.py  test_hyprctl.py  test_input.py  test_keyboard_target.py  test_launch.py  test_marks.py  test_mcp_roundtrip.py  test_observe.py  test_prune.py  test_readonly.py  test_safety.py  test_screenshot.py  test_sequence.py  test_session.py  test_stable.py  test_trust.py  test_ui.py  test_use_bind.py  test_wait_for.py  test_waybar.py  test_wire.py  test_zoom.py
tests/fixtures/: desktop.json
waybar/: README.md  hypruse-status.sh
